<resources>
    <!--    default strings-->
    <string name="app_name">IQ тест Brainy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Главная</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!--    default strings end-->


    <string name="firs_start_text">Привет, давай потестим твой мозг на IQ</string>
    <string name="fragment_title">Эй, %s, продолжим тестить твой мозг?</string>
    <string name="answerRight1">Верно!</string>
    <string name="answerRight4">Это правильный ответ, но пока
        в нашей иерархической лестнице ваш статус невысок.</string>
    <string name="answerRight2">Опять правильный ответ. Пошли дальше.</string>
    <string name="answerRight3">А вы неплохи, это правильный ответ.</string>
    <string name="answerFalse1">Неверно!</string>
    <string name="answerFalse4">Это не тот ответ, наверно вы промахнулись пальчиком. Продолжайте, там вопросы, которые вы точно знаете!</string>
    <string name="answerFalse2">Ответ, к сожалению, неправильный. Есть еще куча вопросов, ответы на которые вы, возможно, знаете. Let\'s go!</string>
    <string name="answerFalse3">Ответ неверен, ошибки случаются у каждого, не стоит унывать, продолжайте. </string>
    <string name="home_start_button">Начать</string>
    <string name="loseGameText2">0</string>
    <string name="wonGameIq">10 IQ</string>
    <string name="wonButtonBack">Назад</string>
    <string name="loseButtonBack">назад</string>
    <string name="gameSubmit">ответить</string>
    <string name="about">о нас</string>
    <string name="about_us">О нас</string>
    <string name="aboutUsText">мы маленькие, мы пушистые</string>
    <string name="rules">Правила</string>
    <string name="smallRules">правила</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_name">Ваше имя:</string>
    <string name="snackCheckAnswer">Вы не выбрали ни один из ответов</string>
    <string name="error101">Ошибка №101: не получилось извлечь данные из базы данных</string>
    <string name="errorNotFoundStatus">Не удалось извлечь ваш статус, видимо вы мегамозг</string>
    <string name="defaultName">Genius</string>
    <string name="scoreIq">%d IQ</string>
    <string name="prompt_stairs">Правильно отвечайте на вопросы, чтобы повысить ваш статус. Удачи!</string>
    <string name="prompt_think_about">Не спешите отвечать! Все вопросы рассчитаны на логику, а не на точное знание ответа.</string>


    <string name="answerBack">назад</string>
    <string name="back">Назад</string>
    <string name="answerNextQuestion">следующий</string>
    <string name="end_game_gotoMain">В главное меню?</string>
    <string name="end_game_repeat">Пройти заново?</string>
    <string name="end_game_title">Поздравляем!\nВы прошли все вопросы. Ваш финальный результат ниже</string>
    <string name="exceptionStringNotFound">строка не найндена</string>
    <string name="answerRightAnswer">правильный ответ: %s</string>
    <string name="you_start_iq_text">Ваш стартовый IQ</string>
    <string name="end_game_share_text">Если вам понравилось наше приложение,\n помогите автору, поделившись им с друзьями:</string>
    <string name="label_quest">Вопрос</string>
    <string name="label_answer">Ответ</string>
    <string name="label_start">Начало</string>
    <string name="label_finish">Результат</string>
    <string name="app_author">Sentrin</string>
    <string name="black_theme_text">Темная тема</string>
    <string name="about_author_title">Об авторе</string>
    <string name="about_author_text">Автора можна найти тут: vk.com/sentrin \n\nЕсли вам понравилось приложение, вы можете помочь автору. \n\nПоделитесь приложением с друзьями:</string>
    <string name="estimate_text">Поставьте нам оценку 5 в google play:</string>
    <string name="estimate_button">Оценить</string>
    <string name="share_button">поделиться</string>


</resources>