<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.sentrin.iqtest.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_question"
            app:destination="@id/nav_question" />
        <action
            android:id="@+id/action_nav_home_to_firstStartFragment2"
            app:destination="@id/firstStartFragment"
            app:launchSingleTop="true" />
        <argument
            android:name="sentData"
            app:argType="com.sentrin.iqtest.data.MainEntity"
            app:nullable="true"
            android:defaultValue="@null" />
    </fragment>

    <fragment
        android:id="@+id/nav_question"
        android:name="com.sentrin.iqtest.ui.question.QuestionFragment"
        android:label="@string/label_quest"

        tools:layout="@layout/fragment_question" >
        <action
            android:id="@+id/action_nav_question_to_answerFragment"
            app:destination="@id/answerFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/nav_question"
            app:popUpToInclusive="true" />
        <argument
            android:name="sentData"
            app:argType="com.sentrin.iqtest.data.MainEntity" />
        <action
            android:id="@+id/action_nav_question_to_endGameFragment"
            app:destination="@id/endGameFragment"
            app:popUpTo="@id/nav_home"
            app:popUpToInclusive="false" />
    </fragment>
    <fragment
        android:id="@+id/answerFragment"
        android:name="com.sentrin.iqtest.ui.answer.AnswerFragment"
        android:label="@string/label_answer"
        tools:layout="@layout/fragment_answer" >
        <argument
            android:name="isAnswerRight"
            app:argType="boolean" />
        <argument
            android:name="question"
            app:argType="com.sentrin.iqtest.data.Question" />
        <action
            android:id="@+id/action_answerFragment_to_nav_question"
            app:destination="@id/nav_question"
            app:launchSingleTop="true" />
        <action
            android:id="@+id/action_answerFragment_to_nav_home"
            app:destination="@id/nav_home"
            app:popUpToInclusive="true" />
        <argument
            android:name="sentData"
            app:argType="com.sentrin.iqtest.data.MainEntity" />
    </fragment>
    <fragment
        android:id="@+id/firstStartFragment"
        android:name="com.sentrin.iqtest.ui.firstStart.FirstStartFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_first_start">
        <action
            android:id="@+id/action_firstStartFragment_to_nav_question"
            app:destination="@id/nav_question"
            app:popUpTo="@id/nav_home"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/endGameFragment"
        android:name="com.sentrin.iqtest.ui.endGame.EndGameFragment"
        android:label="@string/label_finish"
        tools:layout="@layout/fragment_end_game" >
        <argument
            android:name="sentData"
            app:argType="com.sentrin.iqtest.data.MainEntity" />
        <action
            android:id="@+id/action_endGameFragment_to_nav_question"
            app:destination="@id/nav_question" />
    </fragment>
    <fragment
        android:id="@+id/aboutApp"
        android:name="com.sentrin.iqtest.ui.aboutApp.AboutAuthorFragment"
        android:label="@string/about_author_title"
        tools:layout="@layout/fragment_about_app" />

</navigation>