<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.sentrin.iqtest.ui.aboutApp.AboutAppViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AboutAppFragment">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:paddingStart="45dp"
            android:paddingEnd="45dp"
            android:text="@string/about_author_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/aboutShareButton"
            style="@style/button_motivate"
            android:onClick="@{()-> viewmodel.onShare()}"
            android:width="150dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/share_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />


        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:paddingStart="45dp"
            android:paddingEnd="45dp"
            android:text="@string/estimate_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/aboutShareButton" />

        <Button
            android:id="@+id/aboutShareButton2"
            android:width="150dp"
            style="@style/buttonAccess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="@string/estimate_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />


        <!--        <TextView-->
<!--            android:id="@+id/textView6"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="104dp"-->
<!--            android:paddingStart="45dp"-->
<!--            android:paddingEnd="45dp"-->
<!--            android:text="Или вы можете помочь материально:"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintHorizontal_bias="0.0"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/aboutShareButton2" />-->

<!--        <Button-->
<!--            android:id="@+id/aboutShareButton3"-->
<!--            style="@style/share_button"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="36dp"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintHorizontal_bias="0.498"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/textView6" />-->


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>