<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.sentrin.iqtest.ui.home.HomeViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.HomeFragment">

        <TextView
            android:id="@+id/homeUserIq"
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="@string/wonGameIq"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_light"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/homeUserStatus"
            tools:text="10 IQ" />

        <TextView
            android:id="@+id/homeTitleText"
            style="@style/commonTextCenter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toTopOf="@+id/switchTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.363"
            tools:text="@string/fragment_title" />

        <Button
            android:id="@+id/home_start_button"
            style="@style/buttonAccess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{()->viewmodel.onStart()}"
            android:text="@string/home_start_button"
            app:layout_constraintBottom_toTopOf="@+id/switchTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/homeUserIq"
            app:layout_constraintVertical_bias="0.472" />

        <TextView
            android:id="@+id/homeYouText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Вы:"
            app:layout_constraintBottom_toTopOf="@+id/switchTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/homeTitleText"
            app:layout_constraintVertical_bias="0.194" />

        <TextView
            style = "@style/user_status"
            android:id="@+id/homeUserStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@{viewmodel.userStatus}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/homeYouText"
            tools:text="Простейшее" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:fontFamily="sans-serif"
            android:text="@string/black_theme_text"
            android:checked="@{viewmodel.darkTheme}"
            android:textColor="@color/text_color_default"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>